# open-alpha-evolve

./: .gitignore  README.md  pyproject.toml
src/open_alpha_evolve/: __init__.py  program.py  program_database.py
src/open_alpha_evolve/program/: __init__.py  types.py
tests/open_alpha_evolve/: test_program.py  test_program_database.py
tests/open_alpha_evolve/program/: test_program.py
