[project]
name = "open-alpha-evolve"
version = "0.1.0"
description = "An implementation of the AlphaEvolve algorithm"
readme = "README.md"
authors = [
    { name = "zdmwi" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_alpha_evolve"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
